# agents

./: .gitignore  LICENSE  README.md  README.org  coding_agent.py  deep_research_agent.py  deep_research_report.md  flake.nix  main.py  math_agent.py  orchestrator_agent.py  pyproject.toml  quorum-deep-research.py  quorum.py  rag_tool.py  run.sh  search_tool.py
pyagents/: config.py  utils.py
pyagents/agents/: __init__.py  coding_agent.py  deep_research_agent.py  math_agent.py  orchestrator_agent.py
pyagents/tools/: memory_tool.py  rag_tool.py  search_api.py  search_tool.py
pyagents/utils/: __init__.py  crawler.py
