[tool.poetry]
name = "pyagents"
version = "0.1.0"
description = ""
authors = ["Preston Pan <ret2pop@gmail.com>"]

[project]
name = "pyagents"
version = "0.1.0"
description = ""
authors = [
    {name = "Preston Pan",email = "ret2pop@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15.0"
dependencies = [
    "langchain (>=1.2.3,<2.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "ddgs (>=9.10.0,<10.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "langgraph-checkpoint-sqlite (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "prompt-toolkit (>=3.0.52,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)"
]

[dependency-groups]
dev = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
